--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -121,3 +121,10 @@
     border: 1px solid #9B525F;
     background: #FFF;
 }
+
+.dropdown {
+    width: 100%;
+    border-radius: 3px;
+    border: 1px solid #9B525F;
+    background: #FFF;
+}
