--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,4 +1,3 @@
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -36,11 +35,11 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
 
 /* EditNoteButtonComponents*/
 
@@ -91,7 +90,7 @@ a {
   background-color: darkgreen;
 }
 
-.tag{
+.tag {
   background-color: #f1f1f1;
   color: #333;
   border: 2px solid #333;
