--- a/frontend/src/app/components/Filter/Filter.css
+++ b/frontend/src/app/components/Filter/Filter.css
@@ -1,15 +1,28 @@
+.filter-component {
+    top: 0;
+    position: fixed;
+    left: -300px;
+    transition: left 0.3s ease-in-out;
+    width: 300px;
+    height: 100%;
+    background-color: #f8f8f8;
+    z-index: 0;
+}
+
+.filter-component.visible {
+    left: 90px;
+}
+
 .filters {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    padding-left: 4rem; /* Matches the width of the Sidebar component */
-    width: 100%; /* Adjust width to prevent overflow */
-    max-height: 100%;
-    overflow-y: auto;
-    box-sizing: border-box; /* Include padding in the width calculation */
     padding: 16px;
-    background-color: #f8f8f8; /* Optional: Match the background */
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .filters-title {
