--- a/frontend/src/app/components/Sidebar/NavBar.module.css
+++ b/frontend/src/app/components/Sidebar/NavBar.module.css
@@ -8,9 +8,11 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  min-height: 100%;
+  min-height: 99%;
   padding: 29px 0 13px;
   color: white;
+  z-index: 100;
+  border: 2px solid red;
 }
 
 .otherSvgs {
@@ -67,10 +69,12 @@
   gap: 8px;
   cursor: pointer;
   transition: all 0.3s ease;
+  border: 2px solid blue;
 }
 
 .navItemSettings {
-  margin: auto 0 50px;
+  margin-top: auto;
+  border: 2px solid green;
 }
 
 .navItem:hover, .navItemSettings:hover {
