--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -53,7 +53,7 @@
     margin-left: 2rem;
 }
 
-.garment-type-container {
+.garment-type-component {
     display: flex;
     width: 50%;
     flex-direction: column;
@@ -114,6 +114,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    gap: 5vw;
 }
 
 .singleSelect {
@@ -127,4 +128,21 @@
     border-radius: 3px;
     border: 1px solid #9B525F;
     background: #FFF;
+}
+.garment-type-component {
+    width: 50%;
+}
+
+.garment-type-component select {
+    border-radius: 3px;
+    border: 1px solid #9B525F;
+    background: #FFF;
+    width: stretch;
+}
+
+.time-period-component select {
+    border-radius: 3px;
+    border: 1px solid #9B525F;
+    background: #FFF;
+    width: stretch;
 }
