--- a/frontend/src/app/components/Sidebar/NavBar.module.css
+++ b/frontend/src/app/components/Sidebar/NavBar.module.css
@@ -1,19 +1,15 @@
 .navigationBar {
   background-color: rgba(155, 82, 95, 1);
   width: 90px;
-  position: fixed; /* Keep this fixed for the entire sidebar */
+  position: fixed;
   left: 0;
   top: 0;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   padding: 29px 0 13px;
   color: white;
   z-index: 100;
-}
-
-.otherSvgs {
-  background-color: white;
 }
 
 @media (max-width: 991px) {
@@ -69,11 +65,23 @@
 }
 
 .navItemSettings {
-  position: relative;
-  top: 325px;
+  position: fixed;
+  width: 90px;
+  bottom: 10px;
 }
 
+@media (max-width: 991px) {
+  .navItemSettings {
+    width: 70px;
+  }
+}
 
+@media (max-width: 640px) {
+  .navItemSettings {
+    width: 60px;
+    padding-top: 20px;
+  }
+}
 
 .navItem:hover, .navItemSettings:hover {
   transform: scale(1.1);
