--- a/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
+++ b/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
@@ -69,7 +69,7 @@
     flex-wrap: nowrap; /* Allow wrapping if there are too many items */
 }
 
-.circle {
+.circle1 {
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -91,6 +91,32 @@
     background-color: red;
 }
 
+.circle2 {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
+
+.Great {
+    background-color: green;
+}
+
+.repair{
+    background-color: purple;
+}
+
+.washing {
+    background-color: blue;
+}
+
+.cleaning {
+    background-color: lightblue;
+}
+
+.Not {
+    background-color: grey;
+}
+
 .id, .name, .status, .drop-down, .condition{
     flex: 1; 
     text-align: center;
@@ -109,6 +135,15 @@
     align-items: center;
     gap: 1.5vh;
     justify-content: center;
+}
+
+.condition {
+    display: flex;
+    align-items: center;
+    gap: 1.5vh;
+    justify-content: center;
+    text-wrap: nowrap;
+    justify-content: flex-start;
 }
 
 .drop-down {
