--- a/frontend/src/app/inventory/15Tablecomp/Inventory.css
+++ b/frontend/src/app/inventory/15Tablecomp/Inventory.css
@@ -78,7 +78,9 @@ box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
     color: #333;
 }
 
-#NameTag {
+
+
+#NameTag, #SelectAll {
     cursor: pointer;
 }
 
@@ -86,6 +88,17 @@ box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
     transition: all 0.5s ease;
     color: #1c1c1c;
     font-weight: 500;
+}
+
+#SelectAll {
+    color: #007BFF;  
+    text-decoration: underline;  
+    cursor: pointer;  
+}
+
+#SelectAll:hover {
+    color: #0056b3;  
+    text-decoration: underline;  
 }
 
 
