--- a/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
+++ b/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
@@ -19,13 +19,13 @@
     gap: 1vh;
     margin-left: 1vh;
     width:6.5vw;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .checkbox-input {
     display: flex;
-    width: 20px;
-    height: 20px;
+    width: 1rem;
+    height: 1rem;
     padding: 5px;
     align-items: center;
     gap: 10px;
@@ -78,10 +78,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 5vh;
-    justify-content: space-between;
     width: 50vw;
-    flex-wrap: nowrap; /* Allow wrapping if there are too many items */
+    z-index: 100;
+    justify-content: space-between;
+    font-size: 0.85rem;
 }
 
 .circle1 {
@@ -137,16 +137,16 @@
 }
 
 .id, .name, .status, .drop-down, .condition{
-    flex: 1; 
-    text-align: center;
+    flex: 1 1; 
+    text-align: left;
 }
 
 .id {
-    width: 1vw;
+    padding-left: 4.5vw;
 }
 
 .name {
-    width: 8vw
+    padding-right: 0.75vw;
 }
 
 .status {
@@ -154,6 +154,7 @@
     align-items: center;
     gap: 1.5vh;
     justify-content: center;
+    padding-right: 3.5vw;
 }
 
 .condition {
@@ -163,6 +164,7 @@
     justify-content: center;
     text-wrap: nowrap;
     justify-content: flex-start;
+    padding-right: 0.75vw;
 }
 
 .drop-down {
