--- a/frontend/src/app/components/ReturnButton.css
+++ b/frontend/src/app/components/ReturnButton.css
@@ -1,7 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Akatab:wght@400;500;600;700;800;900&display=swap');
 
-* {
-    background-color: #F8F5F5;
+/* container for all return items */
+.wrapper {
+    position: absolute;
+    display: flex;
+    z-index: 100000;
+    justify-content: space-between;
+    flex-direction: column;
+    left:0;
+    top:0;
+    height: 100vh;
+    padding: 5vh;
+    background: #F8F5F5;
+}
+
+.header {
+    font-size: 2.5rem; 
+    justify-content: space-between;
 }
 
 /* container for all return items */
@@ -9,21 +24,26 @@
     display: flex;
     justify-content: space-around;
     flex-flow: row wrap;
+    justify-items: flex-start;
     align-items: baseline;
-    margin: 2vw;
+    margin-top: 2vh;
+    width: 85vw;
 }
 
 /* one translucent red box */
 .returnItem {
     display: flex;
+    margin-bottom: 2vh;
     flex-direction: column;
     background-color: #E3CECE;
-    border: 1% solid #9B525F;
-    width: 100%;
+    border: 0.1vw solid #9B525F;
+    padding: 1vw;
+    width: 26vw;
     height: auto;
-    margin: 2vw;
     color: black;
     font-family: "Akatab", serif;
+    border-radius: 4.813px;
+    box-shadow: 0px 1.925px 4.813px 0px rgba(0, 0, 0, 0.25);
 }
 
 /* top row in a given return item box -- containing img, name/id info, 
@@ -31,14 +51,14 @@
 .itemID {
     display: flex;
     flex-direction: row;
-    gap: 1vw;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 /* container for item name and id number -- middle element in .itemID */
 .itemInfo {
     display: flex;
     flex-direction: column;
-    gap: 1vw;
 }
 
 /* note: will need separate css class for handling exit button */
@@ -47,8 +67,8 @@
 /* textbox for "notes" about return item */
 .notesTextbox {
     width: 100%;
-    height: 10vw;
-    border: 1% solid #9B525F;
+    height: 5vw;
+    border: 0.1vw solid #9B525F;
     background-color: #F8F5F5;
 }
 
@@ -56,15 +76,15 @@
  * this should be an element of type <select> with dropdown items as <option> */
 .conditionDropdown {
     width: 100%;
-    height: 5vw;
+    height: 2vw;
     position: relative;
     display: inline-block;
-    border: 1% solid #9B525F;
+    border: 0.1vw solid #9B525F;
     background-color: #F8F5F5;
 }
   
 /* styling individual dropdown elements */
-.dropdown-content {
+.dropdownContent {
     display: none;
     position: absolute;
     background-color: #9B525F;
@@ -74,4 +94,12 @@
   
 .conditionDropdown:hover .dropdown-content {
     display: block;
+}
+
+.page-select {
+    display: flex;
+    padding-right: 5%;
+    align-items: flex-end;
+    justify-content: center;
+    flex: 1;
 }
